--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1619,3 +1619,101 @@ left: -33.33%; }
    }
 
 }
+
+
+// Subsection pricing table
+
+.subsec-pricing-tables {
+  display: block;
+  padding-top: 5vh;
+  padding-bottom: 15vh;
+  background-color: #1b1a1c;
+  text-align: center;
+  color:#fff;
+
+  h3{
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    font-size: 4em;
+    margin: 0 0 5px 0;
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+
+    .table-container{
+      display:grid;
+      grid-template-columns:1fr 1fr 1fr;
+      justify-items: center;
+    }
+    .table-row{
+      margin-top: 10vh;
+    }
+
+    .table-1 {
+      display: grid;
+      grid-template-rows: auto;
+
+    padding: 3vh 2vw;
+    max-width: 25vh;
+    border-radius: 10px;
+    background-color: #1f1f1f;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .75);
+    -webkit-transition: background-color 350ms ease;
+    transition: background-color 350ms ease;
+    font-family: Lato, sans-serif;
+    color: #f5f5f5;
+  }
+  .table-1:hover {
+    background-color: #0c0a0a;
+  }
+  .table-title {
+    margin-bottom: 1vh;
+    font-size: 2.2em;
+    line-height: 2.2em;
+    font-weight: 700;
+  }
+  .div-block-3 {
+    width: 100%;
+    height: 3px;
+    margin-top: 1vh;
+    background-color: #1b1a1c;
+  }
+  .table-price {
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    -webkit-transition: color 350ms ease;
+    transition: color 350ms ease;
+    color: #ea716e;
+    font-size: 2em;
+  }
+  .table-hook {
+    margin-top: 1vh;
+    margin-bottom: 4vh;
+    font-size: 1.35em;
+    font-weight: 700;
+  }
+  .table-list {
+    margin-bottom: 5vh;
+    padding-left: 1.25em;
+    font-style: italic;
+    text-align: left;
+  }
+  .table-choose {
+    margin-top: auto;
+    margin-bottom: 3vh;
+    padding-top: 1vh;
+    padding-bottom: 1.2vh;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+    border-radius: 5px;
+    -webkit-transition: background-color 350ms ease;
+    transition: background-color 350ms ease;
+    font-size: 1.2em;
+    line-height: 1.3em;
+    font-weight: 700;
+    background-color: #ea716e;
+  }
+
+}
